modules/homeStyle.css
.body-bg{
    background-image: url(../img/background.jpg);
    background-repeat: repeat;
    background-position: 50%;
    background-color: #f2eee5;
}

.jumbotron {
  background-image: url("../img/main-banner.jpg");
  background-position: center center;
  background-size: cover;
  color: white;
  border-radius: 0 !important;
}

.background-tint {
  background-color: rgba(0,0,0,.9);
  background-blend-mode: multiply;
}

#grid:hover{
    background-color: #d99d7b !important;
}

#grid.active:after {
    content: '\f00c';
    font-family: FontAwesome;
    float: left;
}

#grid.active{
    background-color: #d99d7b !important;
}

#list:hover{
    background-color: #d99d7b !important;
}

#list.active:after {
    content: '\f00c';
    font-family: FontAwesome;
    float: left;
}

#list.active{
    background-color: #d99d7b !important;
}

.listView {
    margin-bottom: 16px;
    border-radius: 0.25rem;
}

.has-search .form-control {
    padding-left: 2.375rem;
}

.has-search .form-control-feedback {
    position: absolute;
    z-index: 2;
    display: block;
    width: 2.375rem;
    height: 2.375rem;
    line-height: 2.375rem;
    text-align: center;
    pointer-events: none;
    color: #aaa;
}

.card-title {
    color: #f19a0e;
    font-size: 18px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
}
.card-title:hover {
    color: #c17b0b;
    text-decoration: none;
}

.card-title-holder {
    height: 65px;
}

.author {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
}

.card-text{
    padding-bottom: 8px;
    font-weight: lighter
}

.card-price {
    font-weight: normal;
}

.cart-btn{
    width: 100%;
    background-color: #d99d7b;
    border: none;
    color: white;
    padding: 3px 4px;
    font-weight: lighter;
    cursor: pointer;
}

.cart-btn .disabled{
    pointer-events: none;
    cursor:default;
}

.cart-btn:hover{
    background-color: #bd8566;
    color:white;
}

.card-img-top {
    width: 100%;
    height: 18vw;
    object-fit: cover;
}

@media (max-width: 767px){
    .card-img-top{
        height: 40vw;
    }
}

.box {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
    -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.box::after {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
    opacity: 0;
    -webkit-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.box:hover {
    -webkit-transform: scale(1.05, 1.05);
    -moz-transform: scale(1.05, 1.05);
    transform: scale(1.05, 1.05);
}

.box:hover::after {
    opacity: 1;
}

.banner-intro p {
    text-shadow: 0 6px 12px rgba(0, 0, 0, 0.75);
}
.banner-intro {
    animation: fadein 2s;
    -moz-animation: fadein 2s;
    -webkit-animation: fadein 2s;
}
@keyframes fadein {
    from {
        transform: scale(1.25, 1.25);
        opacity: 0;
    }
    to {
        transform: revert;
        opacity: 1;
    }
}
@-moz-keyframes fadein {
    from {
        -moz-transform: scale(1.25, 1.25);
        opacity: 0;
    }
    to {
        -moz-transform: revert;
        opacity: 1;
    }
}
@-webkit-keyframes fadein {
    from {
        -webkit-transform: scale(1.25, 1.25);
        opacity: 0;
    }
    to {
        -webkit-transform: revert;
        opacity: 1;
    }
}

